# de-assignment

./: .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
src/smhi/: main.py  smhi.py  smhi_api.py
tests/: conftest.py  mock_response.py  test_smhi_api.py
tests/example_api_responses/: smhi_parameter_response.xml  smhi_temp_dict.json  smhi_temperature_response.json
