[metadata]
name = smhi
version = 0.0.1
description="Data integration with SMHI"
author="Trustly Data Engineering Team"

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    typing_extensions
    pre-commit
    coverage
    covdefaults
    pytest-asyncio
    pytest-mock
    aiohttp==3.10.6
    pytest==6.2.5
    requests==2.26.0

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
dev =
    pre-commit
    pytest
    coverage
    covdefaults

[flake8]
ignore =
    # space before (needed for how black formats slicing)
    E203,
    #line break before binary operator
    W503
max-line-length = 99
select = B,C,E,F,W,T4,B9

[tool.isort]
profile = "black"

[coverage:run]
plugins = covdefaults
source = smhi
omit =
    main.py

[coverage:report]
exclude_also =
    ; Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    ; Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    ; Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

    ; Don't complain about abstract methods, they aren't run:
    @(abc\.)?abstractmethod

fail_under = 85
